[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main Menu/Splash Screen.png" type="Texture" id=1]
[ext_resource path="res://scripts/ProfileButton.gd" type="Script" id=2]
[ext_resource path="res://Fonts/BlackChancery.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/NewProfileButton.gd" type="Script" id=4]
[ext_resource path="res://scripts/QuitButton.gd" type="Script" id=5]
[ext_resource path="res://scripts/NewCampaignPanel.gd" type="Script" id=6]
[ext_resource path="res://scripts/NewCharacterPanel.gd" type="Script" id=7]
[ext_resource path="res://Main Menu/onlyportrait.png" type="Texture" id=8]

[node name="MainMenuNode2D" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 204.552
margin_top = 92.65
margin_right = 814.552
margin_bottom = 517.65
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 866.958
margin_top = 552.166
margin_right = 952.958
margin_bottom = 575.166
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Quit Game"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileLabel" type="Label" parent="."]
margin_left = 17.3634
margin_top = 17.9621
margin_right = 71.3634
margin_bottom = 34.9621
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Profile :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewProfileLabel" type="Label" parent="."]
margin_left = 417.993
margin_top = 21.8392
margin_right = 555.994
margin_bottom = 38.8392
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Enter Profile Name :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileButton" type="Button" parent="."]
margin_left = 81.0
margin_top = 13.0519
margin_right = 173.0
margin_bottom = 33.0519
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfilePopupMenu" type="PopupMenu" parent="ProfileButton"]
margin_left = -3.0
margin_top = 16.0
margin_right = 151.0
margin_bottom = 198.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewProfileButton" type="Button" parent="ProfileButton"]
margin_left = 213.737
margin_top = 5.0
margin_right = 298.737
margin_bottom = 25.0
text = "New Profile"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ProfileButton/NewProfileButton"]
margin_left = 274.263
margin_top = -2.0
margin_right = 464.263
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewCharacterButton" type="Button" parent="ProfileButton"]
margin_left = 132.257
margin_top = 532.496
margin_right = 242.257
margin_bottom = 555.496
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.94902, 0, 1 )
disabled = true
text = "New Character"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewCharacterPanel" type="Panel" parent="ProfileButton/NewCharacterButton"]
visible = false
margin_left = -213.0
margin_top = -547.0
margin_right = 805.0
margin_bottom = 48.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="ProfileButton/NewCharacterButton/NewCharacterPanel"]
margin_left = 40.7218
margin_top = 559.51
margin_right = 95.7218
margin_bottom = 582.51
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OKButton" type="Button" parent="ProfileButton/NewCharacterButton/NewCharacterPanel"]
margin_left = 928.897
margin_top = 553.647
margin_right = 968.897
margin_bottom = 576.647
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.00784314, 1, 0, 1 )
disabled = true
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterNameLabel" type="Label" parent="ProfileButton/NewCharacterButton/NewCharacterPanel"]
margin_left = 5.27426
margin_top = 15.8228
margin_right = 152.274
margin_bottom = 29.8228
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
text = "Enter Character Name :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ProfileButton/NewCharacterButton/NewCharacterPanel"]
margin_left = 177.883
margin_top = 13.3604
margin_right = 302.883
margin_bottom = 37.3604
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="ProfileButton/NewCharacterButton/NewCharacterPanel"]
margin_left = 316.456
margin_top = 19.339
margin_right = 356.456
margin_bottom = 33.339
text = "[NO NAME]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitLabel" type="Label" parent="ProfileButton/NewCharacterButton/NewCharacterPanel"]
margin_left = 21.766
margin_top = 84.3432
margin_right = 157.766
margin_bottom = 98.3432
text = "Only Portrait Choice :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ProfileButton/NewCharacterButton/NewCharacterPanel"]
margin_left = 168.686
margin_top = 73.4602
margin_right = 208.686
margin_bottom = 113.46
texture = ExtResource( 8 )

[node name="NewCampaignButton" type="Button" parent="ProfileButton"]
margin_left = -18.5639
margin_top = 531.663
margin_right = 93.4361
margin_bottom = 554.663
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.968627, 0, 1 )
disabled = true
text = "Start Campaign"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewCampaignPanel" type="Panel" parent="ProfileButton/NewCampaignButton"]
visible = false
margin_left = -57.0
margin_top = -543.0
margin_right = 961.0
margin_bottom = 52.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 71.3538
margin_top = 551.202
margin_right = 161.354
margin_bottom = 582.202
custom_fonts/font = ExtResource( 3 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CampaignsLabel" type="Label" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 87.4257
margin_top = 45.7493
margin_right = 210.426
margin_bottom = 62.7493
custom_fonts/font = ExtResource( 3 )
text = "Chose a Campaign :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterLabel" type="Label" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 389.98
margin_top = 53.4083
margin_right = 512.98
margin_bottom = 70.4083
custom_fonts/font = ExtResource( 3 )
text = "Pick Characters :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickedCharacterLabel" type="Label" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 662.703
margin_top = 51.3577
margin_right = 785.703
margin_bottom = 68.3577
custom_fonts/font = ExtResource( 3 )
text = "Picked Characters :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CampaignsItemList" type="ItemList" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 85.0
margin_top = 72.0
margin_right = 281.0
margin_bottom = 487.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharactersItemList" type="ItemList" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 377.0
margin_top = 76.0
margin_right = 573.0
margin_bottom = 491.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickedCharactersItemList" type="ItemList" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 647.0
margin_top = 73.0
margin_right = 834.0
margin_bottom = 299.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedCampaignLabel" type="Label" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 99.349
margin_top = 494.797
margin_right = 228.349
margin_bottom = 511.797
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.996078, 0, 0, 1 )
text = "Selected Campaign :"

[node name="SelectedCampaignNameLabel" type="Label" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 99.349
margin_top = 518.059
margin_right = 228.349
margin_bottom = 535.059
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.996078, 0.909804, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddButton" type="Button" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 584.406
margin_top = 122.725
margin_right = 641.406
margin_bottom = 145.725
custom_fonts/font = ExtResource( 3 )
text = "ADD"

[node name="RemoveButton" type="Button" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 580.052
margin_top = 152.0
margin_right = 647.052
margin_bottom = 175.0
custom_fonts/font = ExtResource( 3 )
text = "Remove"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="ProfileButton/NewCampaignButton/NewCampaignPanel"]
margin_left = 824.0
margin_top = 541.0
margin_right = 901.0
margin_bottom = 577.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.054902, 1 )
disabled = true
text = "Start !"
__meta__ = {
"_edit_use_anchors_": false
}
